# asteroid-timer

./: CMakeLists.txt  README.md  asteroid-timer.desktop  asteroid-timer.desktop.template  asteroid-timer.in  asteroid-timer.pro  main.cpp  main.qml  systemdtimer.cpp  systemdtimer.h
i18n/: asteroid-timer.ar.ts  asteroid-timer.ast.ts  asteroid-timer.az.ts  asteroid-timer.be.ts  asteroid-timer.bqi.ts  asteroid-timer.cs.ts  asteroid-timer.da.ts  asteroid-timer.de_DE.ts  asteroid-timer.desktop.h  asteroid-timer.el.ts  asteroid-timer.en_GB.ts  asteroid-timer.eo.ts  asteroid-timer.es.ts  asteroid-timer.es_AR.ts  asteroid-timer.fa.ts  asteroid-timer.fi.ts  asteroid-timer.fr.ts  asteroid-timer.gl.ts  asteroid-timer.he.ts  asteroid-timer.hi.ts  asteroid-timer.hr.ts  asteroid-timer.hu.ts  asteroid-timer.ia.ts  asteroid-timer.id.ts  asteroid-timer.isv.ts  asteroid-timer.it.ts  asteroid-timer.ja.ts  asteroid-timer.ka.ts  asteroid-timer.kab.ts  asteroid-timer.ko.ts  asteroid-timer.lb.ts  asteroid-timer.lt.ts  asteroid-timer.mr.ts  asteroid-timer.ms.ts  asteroid-timer.nb.ts  asteroid-timer.nb_NO.ts  asteroid-timer.nl_BE.ts  asteroid-timer.nl_NL.ts  asteroid-timer.oc.ts  asteroid-timer.pl.ts  (+20 more)
src/: CMakeLists.txt  main.qml
